--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
           <li><a href="#">more blogzees</a></li>
           <li><a href="#">sign up</a></li>
         </ul>
+        <input type="text" placeholder="search....."><input type="button" value="Go">
       </nav>
 
       <p>blogzee is your next favorite blogging & blog viewing website. period.</p>
