--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       <article>
         <h2>Lorem Ipsum</h2>
         <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
-        <h4>you can find more about it <a href="https://www.lipsum.com/">here</a> </h4>
+        <em><a href="https://www.lipsum.com/">find more about it here</a></em>
       </article>
 
       <article>
@@ -46,13 +46,13 @@
         <p>Local resident Katie Nicholson turned 50 today and officially joins the ranks of the wrinkly oldies.
 
           When asked how she felt, Ms Nicholson said "Oh, it's not so bad turning 50. Sure my joints ache, my hair is greying, and I suffer from hot flashes, but I'm so forgetful these days that I hardly remember to notice the discomfort. In fact, my memory's so bad that I probably won't even remember having this conversation with you. Who are you again, by the way?".</p>
-          <h4>continue reading <a href="https://www.homemade-gifts-made-easy.com/newspaper-generator.html">here</a></h4>
+          <em><a href="https://www.homemade-gifts-made-easy.com/newspaper-generator.html">continue reading</a></em>
       </article>
 
       <article>
         <h2>Sokal affair</h2>
         <p>The hoax caused controversy about the scholarly merit of commentary on the physical sciences by those in the humanities; the influence of postmodern philosophy on social disciplines in general; and academic ethics, including whether Sokal was wrong to deceive the editors or readers of Social Text; and whether Social Text had abided by proper scientific ethics.</p>
-        <h4>read more about it <a href="https://en.wikipedia.org/wiki/Sokal_affair">here</a></h4>
+        <em><a href="https://en.wikipedia.org/wiki/Sokal_affair">read more about it </a></em>
       </article>
 
     </main>
